required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Fixed buffer overflow in oracle spatial driver with large sql data (#2694)

- Improve FastCGI include file finding logic (#3200)


Version 5.6.0-beta5 (2009-11-04):
---------------------------------

- Apply a minimum width on label outline (new outlines were too thin by default)

- Don't apply scalefactor to polygon outline widths (but apply the 
  resolutionfactor)

- Fix vector symbol size calculation (#2896)

- Applied code clean up patch for mapsearch.c. (#3189)

- Fixed labels centering when the label is longer than the line (#2867)

- Ensure Python MapScript building doesn't reorder the libraries, support the 
  'subprocess' module where available for setup.py, and default to using the 
  "super" swig invocation described in the Python MapScript README when 
  mapscript_wrap.c isn't available on the file system.  #2663 contains the 
  reordering issue.

- Fixed memory leak with shapefiles associated with one-pass query 
  implementation (#3188)

- Fix abs/fabs usage that prevented angle follow labels to be discarded if 
  they were too wrapped on themselves

- Allow CGI mapshape and imgshape variables to consume WKT strings (#3185)

- Added support for nautical miles unit (#3173)

- Fixed encoding metadata ignored by a few wcs/wfs 1.1 and sos requests (#3182)

- PHP/Mapscript: added "autofollow" and "repeatdistance" in labelObj (#3175)

- Added charset in content-type http header for wms/wfs/sos/wcs requests (#2583)

- Python/MapScript: improve compatibility for different swig versions (#3180)

- maprasterquery.c: a few fixes since beta4 (#3181, #3168).
